data/derived/comb/progs/unify/prog7395.ml.out
Characters 135-152:
  ([(x1+x2+a1)/10],[a2 :: (x1+x2+a1) mod 10]) in 
                          ^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
